# centres

./: README.md  THEORY.md  centres-gui.iss  centres-gui.spec  pyproject.toml
.github/workflows/: build-windows.yml
centres/: __init__.py  centers.py  cli.py  energy.py  field.py  graph.py  gui.py  pipeline.py  properties.py  visualize.py  worker.py
images/: README.md
tests/: test_energy.py  test_field.py  test_graph.py  test_pipeline.py  test_properties.py  test_visualize.py
